<resources>
    <string name="app_name">Онлайн-куратор</string>
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="contentDescriptionPhotoInMyProfile">Фотография профиля</string>
    <string name="contentDescriptionButtonFindGraduate">Найти выпускника</string>
    <string name="contentDescriptionOpenProfile">Открыть окно профиля</string>
    <string name="contentDescriptionInputParametersForSearch">Окно ввода параметров для поиска выпускника</string>
    <string name="contentDescriptionButtonAttach">Кнопка для прикрепления документа</string>
    <string name="contentDescriptionButtonSearch">Кнопка для поиска выпускников</string>
    <string name="contentDescriptionButtonSettings">Кнопка для открытия окна дополнительных настроек поиска выпускников</string>
    <string name="my_profile">Мой профиль</string>
    <string name="requests_in_progress">Запросы в работе</string>
    <string name="requests_personal">Персональные запросы</string>
    <string name="requests_for_all">Общие запросы</string>
    <string name="data_about_graduates">Данные о выпускниках</string>
    <string name="agreement">Соглашение</string>
    <string name="tech_support">Тех.поддержка</string>
    <string name="exit">Выход</string>
    <string name="online">Могу принимать запросы</string>
    <string name="offline">Не могу принимать запросы</string>
    <string name="error_connection">Ошибка подключения</string>
    <string name="check_connection">Проверьте подключение к Интернету и повторите попытку</string>
    <string name="try_request">Повторить</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="check_data">Проверьте корректность введенных данных</string>
    <string name="agreement_not_attach">Вы не прикрепили заявление</string>
    <string name="check_passwords">Ваши пароли не совпадают</string>
    <string name="size_of_file">Размер файла не должен превышать 1МБ</string>
    <string name="login">Войти</string>
    <string name="email_login">Почта</string>
    <string name="password_login">Пароль</string>
    <string name="register_here">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="Write_email">Пожалуйста, укажите email, который Вы использовали для входа в приложение. На ваш email будет отправлен пароль.</string>
    <string name="prepare_request">Оформление заявки</string>
    <string name="description_prepare_request">Для оформления заявки необходимо заполнить все поля ниже. После одобрения заявки ответ придет на email Вашей организации, поэтому будьте внимательны при заполнении данного поля. Ответ ожидайте в течение 24 часов с момента отправки обращения.</string>
    <string name="name_of_organization">Название организации</string>
    <string name="email_organization">Почта организации</string>
    <string name="city_organization">Название населенного пункта</string>
    <string name="edit">Редактировать</string>
    <string name="save">Обновить профиль</string>
    <string name="send">Отправить</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="input_old_password">Введите старый пароль</string>
    <string name="input_new_password">Введите новый пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="refresh_photo">Обновить фотографию</string>
    <string name="remove_photo">Удалить фотографию</string>
    <string name="email">Почта</string>
    <string name="number_of_phone">Рабочий номер телефона</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="direction_child_home">Введите название организации, в которой Вы работаете</string>
    <string name="child_home">Название организации</string>
    <string name="users_subject">Регион проживания</string>
    <string name="users_city">Населенный пункт проживания</string>
    <string name="type_of_specialist">Выберите Вашу специализацию</string>
    <string name="start_of_workday">Начало рабочего дня</string>
    <string name="end_of_workday">Конец рабочего дня</string>
    <string name="number_phone_code">+7</string>
    <string name="agreement_about_processing_personal_data">Согласие на обработку персональных данных</string>
    <string name="link_for_reading_document"><u>Ознакомление с документом</u></string>
    <string name="email_of_organization">Введите email организации, в которой Вы работаете</string>
    <string name="go_to_registration">Перейти к регистрации</string>
    <string name="register">Зарегистрироваться</string>
    <string name="type_of_help">Требуемая помощь:</string>
    <string name="psychologist_request">Психолого-педагогическая помощь в решении личных и профессиональных вопросов</string>
    <string name="lawyer_request">Юридическая помощь в решении вопросов с жильем, законом, обращением в прокуратуру, суд и судебным приставам</string>
    <string name="household_request">Помощь в решении бытовых вопросов</string>
    <string name="health_request">Помощь в решении вопросов здравоохранения</string>
    <string name="education_request">Помощь в решении вопросов,связанных с учебной деятельностью</string>
    <string name="finance_request">Помощь в решении финансовых вопросов</string>
    <string name="other_request">Иная помощь</string>
    <string name="error_request">Ошибка:тип запроса</string>
    <string name="list_of_requests_in_progress">Список взятых в работу запросов</string>
    <string name="list_of_requests_personal">Список адресованных Вам запросов</string>
    <string name="list_of_requests_for_all">Запросы, ожидающие исполнителя</string>
    <string name="fullname_of_graduate">ФИО выпускника:</string>
    <string name="phone_of_graduate">Телефон:</string>
    <string name="email_of_graduate">email:</string>
    <string name="city_of_graduate">Населенный пункт:</string>
    <string name="request_from_graduate">Текст запроса:</string>
    <string name="attach_documentation">Прикрепленные документы:</string>
    <string name="date_and_time_request_sent">Дата и время (московское), когда был отправлен запрос:</string>
    <string name="take_request">Взять в работу</string>
    <string name="hint_searching">Поиск выпускника</string>
    <string name="not_results">По вашему запросу результатов не найдено</string>
    <string name="date_of_birth">Дата рождения:</string>
    <string name="sex_of_user">Пол:</string>
    <string name="registration_address">Адрес прописки</string>
    <string name="type_of_flat_from_factual_address">Жилищные условия</string>
    <string name="factual_address">Фактический адрес проживания</string>
    <string name="my_targets">Основные цели на год выпускника</string>
    <string name="my_interests">Увлечения выпускника</string>
    <string name="problems_with_study">Описание проблем с учебой</string>
    <string name="problems_with_flat">Описание проблем с жильем</string>
    <string name="problems_with_money">Описание материальных проблем</string>
    <string name="problems_with_law">Описание проблем с законом</string>
    <string name="other_problems">Описание других проблем</string>
    <string name="name_of_educational_institution">Название учебного заведения, в котором обучаетеся выпускник</string>
    <string name="level_of_education">Уровень образования выпускника</string>
    <string name="my_professional">Текущая профессия выпускника</string>
    <string name="date_of_last_questionary">Дата последнего прохождения Анкетирования:</string>
    <string name="hint_agreement">Подсказка</string>
    <string name="rule_agreement">Для допуска к регистрации в приложении ВПомошь несовершеннолетнего пользователя Вам необходимо ввести его ФИО и прикрепить соглашение на обработку персональных данных</string>
    <string name="surname_of_graduate">Фамилия несовершеннолетнего</string>
    <string name="name_of_graduate">Имя несовершеннолетнего</string>
    <string name="middlename_of_graduate">Отчество несовершеннолетнего</string>
    <string name="download_agreement">Скачать шаблон заявления</string>
    <string name="attach_agreement">Прикрепить соглашение</string>
    <string name="send_agreement">Отправить</string>
    <string name="tech_support_title">Сообщение для тех.поддержки:</string>
    <string name="tech_support_describe">Кратко опишите проблему</string>
    <string name="tech_support_attach_screenshot_describe">При необходимости Вы можете прикрепить скриншот с проблемой</string>
    <string name="tech_support_attach_screenshot">Прикрепить скриншот</string>
    <string name="menu_about_app">О приложении</string>
    <string name="menu_confidence">Политика конфиденциальности</string>
    <string name="menu_delete_profile">Удалить аккаунт</string>
    <string name="button_ok">ОК</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="button_later">Позже</string>
    <string name="button_success">Оценить</string>
    <string name="button_update">Обновить</string>
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_quit">Выйти</string>
    <string name="button_positive_permission">Настроить</string>
    <string name="button_negative_permission">Отмена</string>
    <string name="button_restore">Восстановить</string>
    <string name="button_delete">Удалить</string>
    <string name="button_apply">Применить</string>
    <string name="title_estimate">Оценить приложение</string>
    <string name="title_update">Обновить приложение</string>
    <string name="title_password">Изменение пароля</string>
    <string name="title_quit">Выход</string>
    <string name="title_save_data">Сохранение данных</string>
    <string name="title_permission">Получение разрешения</string>
    <string name="title_error">Ошибка</string>
    <string name="title_settings">Дополнительные параметры поиска</string>
    <string name="message_estimate">Вам нравится это приложение? Оцените его</string>
    <string name="message_update">Доступна новая версия приложения</string>
    <string name="message_quit">Вы дейстивтельно хотите выйти из приложения?</string>
    <string name="message_save_data">Измененные данные не были сохранены. Вы уверены, что хотите выйти?</string>
    <string name="message_permission">Для работы нам необходимо получить от Вас разрешение на работу с внешним хранилищем. Данное разрешение позволит Вам добавлять и сохранять картинки, документы</string>
    <string name="message_error">Сервис по работе с загрузками не работает</string>
    <string name="message_delete_profile">Вы действительно хотите удалить аккаунт? Для восстановления аккаунта Вам потребуется ввести логин и пароль</string>
    <string name="message_restore_profile">Вы хотите восстановить аккаунт?</string>
    <string name="message_input_city">Населенный пункт</string>
    <string name="message_input_organization">Организация для детей-сирот</string>
    <string-array name="array_hours">
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="array_minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="array_specialist">
        <item>-</item>
        <item>Педагог-психолог</item>
        <item>Юрист</item>
        <item>Социальный педагог</item>
        <item>Специалист по социальной работе</item>
    </string-array>
</resources>