<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    android:background="@drawable/background_main"
    tools:context=".FragmentProfile">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFullname"
        style="@style/TextStyle"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/date_of_birth"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDateOfBirth"
            style="@style/TextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/sex_of_user"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvSex"
            style="@style/TextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/phone_of_graduate"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPhone"
            style="@style/TextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/email_of_graduate"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextStyle"/>
    </LinearLayout>
    <TextView
        style="@style/TextStyle"
        android:text="@string/child_home"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvNameOfChildHome"
        style="@style/TextStyle"/>
    <TextView
        style="@style/TextStyle"
        android:text="@string/users_subject"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvSubject"
        style="@style/TextStyle"/>
    <TextView
        style="@style/TextStyle"
        android:text="@string/users_city"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvCity"
        style="@style/TextStyle"/>
    <TextView
        style="@style/TextStyle"
        android:text="@string/registration_address"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvRegistrationAddress"
        style="@style/TextStyle"/>
    <TextView
        style="@style/TextStyle"
        android:text="@string/factual_address"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvFactualAddress"
        style="@style/TextStyle"/>
    <TextView
        style="@style/TextStyle"
        android:text="@string/type_of_flat_from_factual_address"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvTypeOfFlat"
        style="@style/TextStyle"/>
</LinearLayout>
</ScrollView>