<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TextStyleForTitleOfDialog"
            android:text="@string/title_update"/>
        <TextView
            style="@style/TextStyleForMessageOfDialog"
            android:text="@string/message_update"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLater"
                style="@style/ButtonStyleLeft"
                android:text="@string/button_later"/>
            <Button
                android:id="@+id/btnUpdate"
                style="@style/ButtonStyleRight"
                android:text="@string/button_update"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>