<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:padding="@dimen/common_padding"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyleForTitle"
                android:text="@string/register_here"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterSurname"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterSurname"
                    style="@style/EditTextStyleForTextLine"
                    android:hint="@string/surname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterName"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterName"
                    style="@style/EditTextStyleForTextLine"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterMiddlename"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterMiddlename"
                    style="@style/EditTextStyleForTextLine"
                    android:hint="@string/middlename" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterEmail"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterEmail"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/main_size"
                    android:textColor="@color/color_for_text"
                    android:text="@string/number_phone_code"
                    android:enabled="false"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRegisterPhone"
                    style="@style/EditTextStyle"
                    app:errorEnabled="true">
                    <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/tietRegisterPhone"
                        style="@style/TextInputEditTextStyle"
                        android:hint="@string/number_of_phone"
                        android:inputType="phone"
                        app:met_mask="(###) ### ## ##"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                style="@style/EditTextStyle"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterPassword"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterConfirmPassword"
                style="@style/EditTextStyle"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterConfirmPassword"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterSubject"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/actvRegisterSubject"
                    style="@style/EditTextStyle"
                    android:hint="@string/users_subject"
                    android:completionThreshold="2"
                    android:completionHint="@string/users_subject"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterCity"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/actvRegisterCity"
                    style="@style/EditTextStyle"
                    android:hint="@string/users_city"
                    android:completionThreshold="2"
                    android:completionHint="@string/users_city"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvRegisterTypeOfSpecialist"
                style="@style/TextStyle"
                android:text="@string/type_of_specialist"/>
            <Spinner
                android:id="@+id/spRegisterTypeOfSpecialist"
                style="@style/SpinnerStyle">
            </Spinner>

            <TextView
                android:id="@+id/tvRegisterChildHome"
                style="@style/TextStyle"
                android:text="@string/direction_child_home" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRegisterChidHome"
                style="@style/EditTextStyle"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRegisterChildHome"
                    style="@style/EditTextStyleForTextLine"
                    android:hint="@string/child_home"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextStyle"
                android:text="@string/start_of_workday"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spStartWorkDayHours"
                    style="@style/SpinnerStyle">
                </Spinner>
                <Spinner
                    android:id="@+id/spStartWorkDayMinutes"
                    style="@style/SpinnerStyle">
                </Spinner>
            </LinearLayout>
            <TextView
                style="@style/TextStyle"
                android:text="@string/end_of_workday"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spEndWorkDayHours"
                    style="@style/SpinnerStyle">
                </Spinner>
                <Spinner
                    android:id="@+id/spEndWorkDayMinutes"
                    style="@style/SpinnerStyle">
                </Spinner>
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbAgreement"
                style="@style/CheckBoxStyle"
                android:text="@string/agreement_about_processing_personal_data"/>

            <TextView
                android:id="@+id/tvLinkForReadingDocument"
                style="@style/TextStyleForLink"
                android:text="@string/link_for_reading_document"/>

            <Button
                android:id="@+id/btnRegister"
                android:text="@string/register"
                style="@style/ButtonStyle"/>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>

