<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TextStyleForTitleOfDialog"
            android:text="@string/title_settings"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutForDialog">
            <AutoCompleteTextView
                android:id="@+id/actvCity"
                style="@style/EditTextStyleForTextLineBlack"
                android:hint="@string/message_input_city"
                android:completionThreshold="2"
                android:completionHint="@string/message_input_city"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutForDialog">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietOrganization"
                style="@style/EditTextStyleForTextLineBlack"
                android:hint="@string/message_input_organization"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnApply"
                style="@style/ButtonStyleLeft"
                android:text="@string/button_apply"/>
            <Button
                android:id="@+id/btnCancel"
                style="@style/ButtonStyleRight"
                android:text="@string/button_cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>